Updated changes toying with the best options for design