@@ -5,7 +5,6 @@
         <groupId>com.evolutionnext</groupId>
         <artifactId>nfjs-ports-adapters</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>full-application</artifactId>
@@ -137,18 +136,15 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j2-impl</artifactId>
-            <version>2.22.0</version>
         </dependency>
         <!-- Log4j API and Core implementation required for binding -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
-            <version>2.22.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.22.0</version>
         </dependency>
         <!-- Jackson for JSON Parsing -->
         <dependency>
@@ -182,11 +178,41 @@
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
-                <version>3.4.3</version>
+                <version>3.4.6</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>build</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
+                    <from>
+                        <image>openjdk:25-ea-slim-bookworm</image>
+                        <platforms>
+                            <platform>
+                                <architecture>amd64</architecture>
+                                <os>linux</os>
+                            </platform>
+                            <platform>
+                                <architecture>arm64</architecture>
+                                <os>linux</os>
+                            </platform>
+                        </platforms>
+                    </from>
                     <to>
-                        <image>dhinojosa/full-application</image>
+                        <image>dhinojosa/full-application:${project.version}</image>
                     </to>
+                    <container>
+                        <mainClass>com.evolutionnext.Runner</mainClass>
+                        <jvmFlags>
+                            <jvmFlag>--enable-preview</jvmFlag>
+                        </jvmFlags>
+                        <ports>
+                            <port>8080</port> <!-- If you still expose an HTTP server -->
+                        </ports>
+                    </container>
                 </configuration>
             </plugin>
         </plugins>
