@@ -12,18 +12,21 @@
         <module>directory-structure</module>
         <module>minimal-application</module>
         <module>full-application</module>
-        <module>blackjack</module>
-        <module>full-application-e2e</module>
         <module>full-application-acceptance</module>
+        <module>full-application-e2e</module>
+        <module>blackjack</module>
     </modules>
-
     <name>${project.artifactId}</name>
-    <url>https://github.com/dhinojosa/gids-ports-adapters</url>
+    <url>https://github.com/dhinojosa/${project.artifactId}</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <avro.version>1.10.2</avro.version>
         <confluent.version>5.0.0</confluent.version>
+        <maven.compiler.source>25</maven.compiler.source>
+        <maven.compiler.target>25</maven.compiler.target>
+        <maven.compiler.release>25</maven.compiler.release>
+        <maven.compiler.args>--enable-preview</maven.compiler.args>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -51,14 +54,15 @@
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-bom</artifactId>
-                <version>2.0.16</version>
+                <version>2.0.17</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-bom</artifactId>
-                <version>2.23.1</version>
+                <version>2.25.0</version>
+                <type>pom</type>
                 <scope>import</scope>
             </dependency>
             <!-- JQwik Property Testing -->
@@ -106,6 +110,14 @@
                 <groupId>com.fasterxml.jackson</groupId>
                 <artifactId>jackson-bom</artifactId>
                 <version>2.18.3</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <!-- Rest Assured -->
+            <dependency>
+                <groupId>io.rest-assured</groupId>
+                <artifactId>rest-assured-bom</artifactId>
+                <version>5.5.5</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -181,8 +193,6 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.10.1</version>
                     <configuration>
-                        <source>24</source>
-                        <target>24</target>
                         <compilerArgs>
                             <arg>--enable-preview</arg>
                         </compilerArgs>
